[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/stun-arm.png" type="Texture" id=1]
[ext_resource path="res://entities/stun-arm/stun_arm.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.8807, 8 )

[node name="StunArm" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.19055, 0.0992126 )
shape = SubResource( 1 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timeout"]
